--- a/blog-app-gitops-deployment/Dockerfile
+++ b/blog-app-gitops-deployment/Dockerfile
@@ -32,59 +32,60 @@
 # # # Set entrypoint
 # ENTRYPOINT ["/entrypoint.sh"]
 
-
-# ---------- Builder Stage ----------
+# ----- builder stage -----
 FROM node:20-alpine AS builder
 
-# Metadata labels (for maintainability)
-LABEL org.opencontainers.image.source="https://github.com/kelomo2502/blog-app-gitops-deployment"
-LABEL org.opencontainers.image.maintainer="kelvinoye@gmail.com"
-LABEL org.opencontainers.image.description="Production build for blog app"
-
-# Set working directory
 WORKDIR /app
 
-# Copy lock files first for optimized caching
+# Install dependencies
 COPY package*.json ./
+RUN npm install
 
-# Install all dependencies
-RUN npm ci
-
-# Copy source files
+# Copy source code and build
 COPY . .
-
-# Build app
 RUN npm run build
 
 
-# ---------- Serve Stage ----------
+
 FROM nginx:alpine
 
-# Add metadata again for final image
+# Metadata for final image
 LABEL org.opencontainers.image.source="https://github.com/kelomo2502/blog-app-gitops-deployment"
 LABEL org.opencontainers.image.maintainer="kelvinoye@gmail.com"
 LABEL org.opencontainers.image.description="Nginx container to serve blog app"
 
-# Run as non-root user (security)
-# Create a new user
+# Add non-root user and group
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
+# Create necessary dirs and assign permissions to non-root user
+RUN mkdir -p /var/cache/nginx /var/run && \
+    chown -R appuser:appgroup /usr/share/nginx /var/cache/nginx /var/run
+
+# Copy custom nginx configuration file to replace default config
+COPY nginx.conf /etc/nginx/nginx.conf
 
 # Set working directory
 WORKDIR /usr/share/nginx/html
 
-# Copy built files from builder
+# Copy build artifacts from the builder stage
 COPY --from=builder /app/dist/ ./
 
-# Copy entrypoint and give permissions
+# Copy and set permissions for entrypoint
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
-# Now switch to non-root user
+# Change ownership of nginx html directory (if not done earlier)
+RUN chown -R appuser:appgroup /usr/share/nginx/html
+
+RUN mkdir -p /run && chown appuser:appgroup /run
+
+# Switch to non-root user
 USER appuser
 
-# Add a health check (simple HTTP check)
+# Health check to verify container is serving
 HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --spider http://localhost || exit 1
+  CMD wget --no-verbose --spider http://127.0.0.1 || exit 1
 
-# Set entrypoint
+# Entrypoint
 ENTRYPOINT ["/entrypoint.sh"]
+
