Remove manual deployment manifest

--- a/blog-app-gitops-deployment/nginx.conf
+++ b/blog-app-gitops-deployment/nginx.conf
@@ -1,29 +1,40 @@
-server {
-    listen 80;
-    server_name _;  # Changed from "localhost" to "_" to match all hosts
+worker_processes 1;
 
-    root /usr/share/nginx/html;
-    index index.html;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        try_files $uri /index.html;
-    }
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
 
-    # Ensure assets are served correctly
-    location /assets/ {
-        root /usr/share/nginx/html;
-    }
+    sendfile        on;
+    keepalive_timeout  65;
 
-    # Fix 404 issue for React client-side routing
-    error_page 404 /index.html;
-
-    # Optional: Add security headers
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-XSS-Protection "1; mode=block";
-    add_header X-Content-Type-Options "nosniff";
-
-    # Optional: Enable gzip compression
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     gzip_vary on;
+
+    server {
+        listen 80;
+        server_name _;  # Matches all hostnames
+
+        root /usr/share/nginx/html;
+        index index.html;
+
+        location / {
+            try_files $uri /index.html;
+        }
+
+        location /assets/ {
+            root /usr/share/nginx/html;
+        }
+
+        error_page 404 /index.html;
+
+        # Optional: Security headers
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Content-Type-Options "nosniff";
+    }
 }
